--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
       <div class="margin flex">
         <h4 class='center'>Edit Existing Dog</h4>
         <form id='dog-form' class="padding margin border-round border-grey">
-          <input type="name" name="name" placeholder="name" value="">
-          <input type="breed" name="breed" placeholder="breed" value="">
-          <input type="sex" name="sex" placeholder="sex" value="">
+          <input id="name-input" type="name" name="name" placeholder="name" value="">
+          <input id="breed-input" type="breed" name="breed" placeholder="breed" value="">
+          <input id="sex-input" type="sex" name="sex" placeholder="sex" value="">
+          <input id="id-input" type="hidden" value="">
           <input type="submit"value="Submit">
         </form>
       </div>
